unpackaged/objects/Campaign_Offer_Codes__c.object
<CustomObject>
  <description>Junction Object between Offer Codes and Campaigns</description>
  <fields>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Offer Codes</relationshipLabel>
    <relationshipName>Campaign_Offer_Codes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Offer_Code__c</fullName>
    <label>Offer Code</label>
    <referenceTo>Offer_Code__c</referenceTo>
    <relationshipLabel>Campaign Offer Codes</relationshipLabel>
    <relationshipName>Campaign_Offer_Codes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Offer_Type__c</fullName>
    <formula>TEXT(Offer_Code__r.Offer_Code_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Offer Type</label>
    <type>Text</type>
  </fields>
  <label>Campaign Offer Code</label>
  <nameField>
    <displayFormat>Offer-{00000}</displayFormat>
    <label>Campaign Offer Codes Name</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Campaign Offer Codes</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
</CustomObject>